--- a/Portfolio Website/public/404.html
+++ b/Portfolio Website/public/404.html
@@ -22,10 +22,10 @@
 
   <!-- CSS Files -->
   <link rel="stylesheet" type="text/css" href="css/base.css" />
-  <link rel="stylesheet" type="text/css" href="css/header.css" />
-  <link rel="stylesheet" type="text/css" href="css/layout.css" />
-  <link rel="stylesheet" type="text/css" href="css/cards.css" />
-  <link rel="stylesheet" type="text/css" href="css/animations.css" />
+  <link rel="stylesheet" type="text/css" href="css/components/header.css" />
+  <link rel="stylesheet" type="text/css" href="css/components/layout.css" />
+  <link rel="stylesheet" type="text/css" href="css/components/cards.css" />
+  <link rel="stylesheet" type="text/css" href="css/components/animations.css" />
   <link rel="stylesheet" type="text/css" href="css/responsive.css" />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css" />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-solid.css" />
@@ -38,16 +38,10 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      height: 100vh;
       text-align: center;
       padding: 20px;
       z-index: 1;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 100%;
-      max-width: 800px;
     }
 
     .error-code {
@@ -64,7 +58,6 @@
       color: #e6e6e6;
       margin: 20px 0;
       max-width: 600px;
-      padding: 0 20px;
     }
 
     .back-home {
@@ -76,7 +69,7 @@
       border-radius: 25px;
       margin-top: 20px;
       transition: all 0.3s ease;
-      border: 0.5px solid rgba(255, 255, 255, 0.2);
+      border: 1px solid rgba(255, 255, 255, 0.2);
     }
 
     .back-home:hover {
