--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -92,14 +92,12 @@
       <!-- Navigation Menu -->
       <div class="left-half">
         <nav id="navn1">
-          <a href="#experience"><img src="./img/briefcase.png" alt="Briefcase icon" /><span
-              class="nav-text">Experience</span></a>
-          <a href="#projects"><img src="./img/project.png" alt="Project icon" /><span
-              class="nav-text">Projects</span></a>
+          <a href="#experience"><img src="./img/briefcase.png" alt="Briefcase icon" /><span class="nav-text">Experience</span></a>
+          <a href="#projects"><img src="./img/project.png" alt="Project icon" /><span class="nav-text">Projects</span></a>
           <a href="#skills"><img src="./img/tools.png" alt="Tools icon" /><span class="nav-text">Skills</span></a>
 
-          <a href="./files/brad_ramnarinesingh_resume.pdf" target="_blank"><img src="./img/resume.png"
-              alt="Resume icon" /><span class="nav-text">Resume</span></a>
+          <a href="./files/brad_ramnarinesingh_resume.pdf" target="_blank"><img src="./img/resume.png" alt="Resume icon" /><span
+              class="nav-text">Resume</span></a>
         </nav>
 
         <!-- Main Profile Card -->
@@ -114,8 +112,7 @@
             <div id="soctitle">Find me</div>
             <a href="https://www.linkedin.com/in/brad-ramnarinesingh/" target="_blank" rel="noopener"><i
                 class="fa fa-linkedin fa-2x"></i></a>
-            <a href="https://github.com/Bradramnarinesingh" target="_blank" rel="noopener"><i
-                class="fa fa-github fa-2x"></i></a>
+            <a href="https://github.com/Bradramnarinesingh" target="_blank" rel="noopener"><i class="fa fa-github fa-2x"></i></a>
             <a href="https://x.com/b_ramnarine" target="_blank" rel="noopener"><i class="fa fa-twitter fa-2x"></i></a>
           </div>
 
@@ -155,10 +152,11 @@
         <p>Bachelor of Science in Computer Science</p>
         <p><i>2021 - Present</i></p>
         <ul>
-          <li>Studied key concepts in programming, problem-solving, and data analysis, including data structures, algorithms, software engineering, probability, and statistics.</li>
-          <li>Gained hands-on experience through coursework and assignments involving coding, mathematical problem-solving, and data interpretation
+          <li>Completed coursework in data structures, algorithms, software engineering, probability theory, statistical
+            inference, and linear algebra.</li>
+          <li>Engaged in collaborative projects focusing on machine learning applications and statistical data analysis.
           </li>
-          <li>Maintained a strong academic record while actively participating in computer science and mathematics communities.</li>
+          <li>Maintained a strong academic record throughout the program.</li>
         </ul>
       </div>
 
@@ -182,15 +180,14 @@
       </div>
       <div class="contentstyle">
         <div class="header">
-          Fake News Detection AI | TensorFlow, NLP (TF-IDF)
+          AI Travel App | Gemini LLM, Next.js, Neon PostgreSQL, APIs
         </div>
-        <p>
-          Developed a machine learning model using TensorFlow to classify news articles as real or fake, leveraging
-          natural language processing (NLP) techniques for accurate text analysis. Designed and implemented an
-          interactive system that processes large datasets, applying TF-IDF vectorization and stopword removal to
-          enhance feature extraction. Ensured model reliability by evaluating performance with precision, recall, and
-          F1-score, optimizing for balanced classification. Built a scalable and efficient pipeline, allowing for
-          seamless real-time text analysis and misinformation detection.
+        <p>Developed an interactive, mobile-friendly web interface with Next.js to ensure a seamless user experience
+          across devices and created a travel assistant app using Gemini LLM to generate personalized travel plans
+          based on user preferences and budgets. Integrated Neon PostgreSQL for efficient data management,
+          establishing a robust backend capable of handling real-time queries and user inputs. Additionally,
+          incorporated APIs for location-based services and traffic updates to enhance trip planning accuracy and
+          convenience.
         </p>
       </div>
       <div class="contentstyle clickable"
