--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -58,12 +58,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
   <!-- CSS Files -->
-  <link rel="stylesheet" type="text/css" href="css/base.css" />
-  <link rel="stylesheet" type="text/css" href="css/components/header.css" />
-  <link rel="stylesheet" type="text/css" href="css/components/layout.css" />
-  <link rel="stylesheet" type="text/css" href="css/components/cards.css" />
-  <link rel="stylesheet" type="text/css" href="css/components/animations.css" />
-  <link rel="stylesheet" type="text/css" href="css/responsive.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css?v=1.1" />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css" />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-solid.css" />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-regular.css" />
@@ -82,7 +77,7 @@
   <div id="content-wrapper">
 
     <!-- Animated Background -->
-    <div id="animated-background"></div>
+    <div id="animated-background" style="width: 100%; height: 100vh"></div>
     <div id="glass-overlay"></div>
 
     <!-- Main Content -->
@@ -92,11 +87,11 @@
       <!-- Navigation Menu -->
       <div class="left-half">
         <nav id="navn1">
-          <a href="#experience"><img src="./img/briefcase.png" alt="Briefcase icon" /><span class="nav-text">Experience</span></a>
-          <a href="#projects"><img src="./img/project.png" alt="Project icon" /><span class="nav-text">Projects</span></a>
-          <a href="#skills"><img src="./img/tools.png" alt="Tools icon" /><span class="nav-text">Skills</span></a>
+          <a href="#experience"><img src="./img/briefcase.png" /><span class="nav-text">Experience</span></a>
+          <a href="#projects"><img src="./img/project.png" /><span class="nav-text">Projects</span></a>
+          <a href="#skills"><img src="./img/tools.png" /><span class="nav-text">Skills</span></a>
 
-          <a href="./files/brad_ramnarinesingh_resume.pdf" target="_blank"><img src="./img/resume.png" alt="Resume icon" /><span
+          <a href="./files/brad_ramnarinesingh_resume.pdf" target="_blank"><img src="./img/resume.png" /><span
               class="nav-text">Resume</span></a>
         </nav>
 
@@ -110,10 +105,10 @@
 
           <div id="social">
             <div id="soctitle">Find me</div>
-            <a href="https://www.linkedin.com/in/brad-ramnarinesingh/" target="_blank" rel="noopener"><i
+            <a href="https://www.linkedin.com/in/brad-ramnarinesingh/" target="_blank"><i
                 class="fa fa-linkedin fa-2x"></i></a>
-            <a href="https://github.com/Bradramnarinesingh" target="_blank" rel="noopener"><i class="fa fa-github fa-2x"></i></a>
-            <a href="https://x.com/b_ramnarine" target="_blank" rel="noopener"><i class="fa fa-twitter fa-2x"></i></a>
+            <a href="https://github.com/Bradramnarinesingh" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+            <a href="https://x.com/b_ramnarine" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
           </div>
 
           <!-- Second Navigation Menu -->
@@ -122,7 +117,7 @@
             <a href="#experience">EXPERIENCE</a>
             <a href="#projects">PROJECTS</a>
             <a href="#skills">SKILLS</a>
-            <a class="resume-link" href="./files/brad_ramnarinesingh_resume.pdf" target="_blank">RESUME</a>
+            <a style="font-weight: 900" href="./files/brad_ramnarinesingh_resume.pdf" target="_blank">RESUME</a>
           </nav>
         </div>
       </div>
@@ -190,8 +185,9 @@
           convenience.
         </p>
       </div>
-      <div class="contentstyle clickable"
-        onclick="window.open('https://github.com/Bradramnarinesingh/House-Prices-Prediction', '_blank')">
+      <div class="contentstyle"
+        onclick="window.open('https://github.com/Bradramnarinesingh/House-Prices-Prediction', '_blank')"
+        style="cursor: pointer;">
         <div class="header">
           <span class="arrow-icon">
             <i class="fas fa-arrow-up-right-from-square"></i>
