--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -28,7 +28,6 @@
   <script src="javascript/vanta.js"></script>
   <script src="javascript/preloader.js"></script>
 
-
   <!-- Vanta.js and p5.js using CDN for Background Animation -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
@@ -43,39 +42,36 @@
 
   <!-- Page Title and Favicon -->
   <title>Brad Ramnarinesingh</title>
-  <link rel="icon" type="image/x-icon" href="./img/logo.png" />
+  <link rel="icon" type="image/x-icon" href="./img/logo.png" alt="Website logo" />
 
   <!-- Fonts and Icons -->
-  <script src="https://kit.fontawesome.com/fc2ecdd57a.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/fc2ecdd57a.js" crossorigin="anonymous" rel="noopener"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900&family=Poppins:wght@300&display=swap"
     rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
   <!-- CSS Files -->
   <link rel="stylesheet" type="text/css" href="css/style.css?v=1.1" />
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css" />
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-solid.css" />
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-regular.css" />
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-light.css" />
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css" rel="noopener" />
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-solid.css"
+    rel="noopener" />
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-regular.css"
+    rel="noopener" />
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-light.css"
+    rel="noopener" />
 </head>
 
 <body>
-
   <!-- Preloader Overlay -->
   <div id="preloader">
     <div class="loader"></div>
   </div>
 
-
-
   <div id="content-wrapper">
-
     <!-- Animated Background -->
     <div id="animated-background" style="width: 100%; height: 100vh"></div>
     <div id="glass-overlay"></div>
@@ -87,12 +83,14 @@
       <!-- Navigation Menu -->
       <div class="left-half">
         <nav id="navn1">
-          <a href="#experience"><img src="./img/briefcase.png" /><span class="nav-text">Experience</span></a>
-          <a href="#projects"><img src="./img/project.png" /><span class="nav-text">Projects</span></a>
-          <a href="#skills"><img src="./img/tools.png" /><span class="nav-text">Skills</span></a>
+          <a href="#experience"><img src="./img/briefcase.png" alt="Experience icon" /><span
+              class="nav-text">Experience</span></a>
+          <a href="#projects"><img src="./img/project.png" alt="Projects icon" /><span
+              class="nav-text">Projects</span></a>
+          <a href="#skills"><img src="./img/tools.png" alt="Skills icon" /><span class="nav-text">Skills</span></a>
 
-          <a href="./files/brad_ramnarinesingh_resume.pdf" target="_blank"><img src="./img/resume.png" /><span
-              class="nav-text">Resume</span></a>
+          <a href="./files/brad_ramnarinesingh_resume.pdf" target="_blank" rel="noopener"><img src="./img/resume.png"
+              alt="Resume icon" /><span class="nav-text">Resume</span></a>
         </nav>
 
         <!-- Main Profile Card -->
@@ -105,10 +103,11 @@
 
           <div id="social">
             <div id="soctitle">Find me</div>
-            <a href="https://www.linkedin.com/in/brad-ramnarinesingh/" target="_blank"><i
+            <a href="https://www.linkedin.com/in/brad-ramnarinesingh/" target="_blank" rel="noopener"><i
                 class="fa fa-linkedin fa-2x"></i></a>
-            <a href="https://github.com/Bradramnarinesingh" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-            <a href="https://x.com/b_ramnarine" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+            <a href="https://github.com/Bradramnarinesingh" target="_blank" rel="noopener"><i
+                class="fa fa-github fa-2x"></i></a>
+            <a href="https://x.com/b_ramnarine" target="_blank" rel="noopener"><i class="fa fa-twitter fa-2x"></i></a>
           </div>
 
           <!-- Second Navigation Menu -->
@@ -117,7 +116,8 @@
             <a href="#experience">EXPERIENCE</a>
             <a href="#projects">PROJECTS</a>
             <a href="#skills">SKILLS</a>
-            <a style="font-weight: 900" href="./files/brad_ramnarinesingh_resume.pdf" target="_blank">RESUME</a>
+            <a style="font-weight: 900" href="./files/brad_ramnarinesingh_resume.pdf" target="_blank"
+              rel="noopener">RESUME</a>
           </nav>
         </div>
       </div>
@@ -166,27 +166,35 @@
           user-friendly, responsive layouts. Proficient in HTML, CSS, and JavaScript, I create interactive user
           interfaces and effectively troubleshoot technical issues to ensure optimal website performance and enhance
           the overall user experience.
-          </ul>
+        </p>
       </div>
 
       <!-- Projects Section -->
       <div class="sectiontitle">
         <div class="heading" id="projects">PROJECTS</div>
       </div>
-      <div class="contentstyle">
+      <div class="contentstyle"
+        onclick="window.open('https://github.com/Bradramnarinesingh/fake-news-detector', '_blank', 'noopener')"
+        style="cursor: pointer;">
         <div class="header">
-          AI Travel App | Gemini LLM, Next.js, Neon PostgreSQL, APIs
+          <span class="arrow-icon">
+            <i class="fas fa-arrow-up-right-from-square"></i>
+          </span>
+          Fake News Detector | Python, TensorFlow, NLTK, Scikit-Learn
         </div>
-        <p>Developed an interactive, mobile-friendly web interface with Next.js to ensure a seamless user experience
-          across devices and created a travel assistant app using Gemini LLM to generate personalized travel plans
-          based on user preferences and budgets. Integrated Neon PostgreSQL for efficient data management,
-          establishing a robust backend capable of handling real-time queries and user inputs. Additionally,
-          incorporated APIs for location-based services and traffic updates to enhance trip planning accuracy and
-          convenience.
+        <p>
+          Developed an advanced machine learning model to detect fake news articles using a combination of natural
+          language processing and deep learning techniques. Implemented a custom text cleaning pipeline that removes
+          HTML tags, special characters, and stopwords while preserving important linguistic features. Utilized TF-IDF
+          vectorization to convert text into numerical features and incorporated a novel excessive punctuation ratio
+          metric to enhance detection accuracy. Built a neural network using TensorFlow with multiple dense layers and
+          dropout regularization to prevent overfitting. The model achieved high accuracy in distinguishing between real
+          and fake news articles, providing confidence scores for its predictions. The project demonstrates expertise in
+          data preprocessing, feature engineering, and deep learning model development.
         </p>
       </div>
       <div class="contentstyle"
-        onclick="window.open('https://github.com/Bradramnarinesingh/House-Prices-Prediction', '_blank')"
+        onclick="window.open('https://github.com/Bradramnarinesingh/House-Prices-Prediction', '_blank', 'noopener')"
         style="cursor: pointer;">
         <div class="header">
           <span class="arrow-icon">
@@ -205,8 +213,14 @@
         </p>
       </div>
 
-      <div class="contentstyle">
-        <div class="header">Portfolio Website | HTML/CSS, JavaScript</div>
+      <div class="contentstyle"
+        onclick="window.open('https://github.com/Bradramnarinesingh/Portfolio-Website', '_blank', 'noopener')"
+        style="cursor: pointer;">
+        <div class="header">
+          <span class="arrow-icon">
+            <i class="fas fa-arrow-up-right-from-square"></i>
+          </span>Portfolio Website | HTML/CSS, JavaScript
+        </div>
         <p>
           Designed and built a personal portfolio website using HTML, CSS, and JavaScript to effectively showcase
           projects and skills. Implemented responsive design principles to ensure consistent performance and
