--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -16,6 +16,12 @@
   <style>
     body {
       background: black !important;
+      min-height: 100vh;
+      min-height: -webkit-fill-available;
+      padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+    }
+    html {
+      height: -webkit-fill-available;
     }
   </style>
 
@@ -38,7 +44,7 @@
   <meta http-equiv="pragma" content="no-cache" />
   <meta http-equiv="expires" content="0" />
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 
   <!-- Page Title and Favicon -->
   <title>Brad Ramnarinesingh</title>
