--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -13,6 +13,12 @@
     gtag("config", "G-Q6C6769Y5E");
   </script>
 
+  <!-- Vercel Analytics -->
+  <script type="module">
+    import { Analytics } from '@vercel/analytics/react';
+    const analytics = new Analytics();
+  </script>
+
   <style>
     body {
       background: black !important;
