--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -14,10 +14,7 @@
   </script>
 
   <!-- Vercel Analytics -->
-  <script>
-    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-  </script>
-  <script defer src="/_vercel/insights/script.js"></script>
+  <script defer src="https://va.vercel-scripts.com/v1/script.debug.js"></script>
 
   <style>
     body {
