--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -3,15 +3,10 @@
 
 <head>
   <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6C6769Y5E"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-    gtag("config", "G-Q6C6769Y5E");
+  <meta name="google-site-verification" content="google-site-verification=Jnqi6GitWUP8saB4joeHa-1chcYZcy7rYg73UcaXO70"/>
+
   </script>
+
 
   <!-- Vercel Analytics -->
   <script defer src="https://va.vercel-scripts.com/v1/script.debug.js"></script>
