--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -3,9 +3,16 @@
 
 <head>
   <!-- Google Analytics -->
-  <meta name="google-site-verification" content="google-site-verification=Jnqi6GitWUP8saB4joeHa-1chcYZcy7rYg73UcaXO70"/>
-
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6C6769Y5E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+    gtag("config", "G-Q6C6769Y5E");
   </script>
+  <meta name="google-site-verification" content="google-site-verification=Jnqi6GitWUP8saB4joeHa-1chcYZcy7rYg73UcaXO70"/>
 
 
   <!-- Vercel Analytics -->
